--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,6 @@ DEBUG=True
 
 ALLOWED_ORIGINS=https://localhost:3000,localhost:5173
 
-GROQ_API_KEY=
-
 OPENAI_API_KEY=
+OPENAI_CONNECTION_SERVICE_URL=
+
