--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ DATABASE_URL=sqlite:///./database.db
 API_PREFIX=/api
 DEBUG=True
 
-ALLOWED_ORIGINS=http://localhost,http://localhost:3000,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost,http://localhost:3000,http://localhost:5173,http://localhost/
 
 OPENAI_API_KEY=
 OPENAI_CONNECTION_SERVICE_URL=
